@@ -2,6 +2,7 @@ cm4all-workshop (7.0) unstable; urgency=low
 
   * workshop: fix use-after-free bug in "${0}" expansion
   * workshop: report spawner errors
+  * workshop: implement plan option "translate"
   * no delay for first PostgreSQL auto-reconnect
 
  --   
